<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="116dp"
        android:text="@string/pedir_ayuda"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="116dp"
        android:text="@string/_21_steps_a_seguir"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="116dp"
        android:text="@string/alg_n_problema"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="136dp"
        android:text="@string/no_te_quedes_callado"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="123dp"
        android:text="@string/t_tambi_n_puedes_ayudar"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="155dp"
        android:text="@string/te_podemos_ayudar"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="309dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="66dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="36dp"
        app:srcCompat="@android:drawable/stat_sys_headset"
        android:focusable="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="295dp"
        android:layout_height="145dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jelpi" />

</androidx.constraintlayout.widget.ConstraintLayout>